apps/fullstack-template/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullstack-template
      component: backend
  template:
    metadata:
      labels:
        app: fullstack-template
        component: backend
    spec:
      containers:
      - name: backend
        image: ft-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ft
spec:
  type: ClusterIP
  selector:
    app: fullstack-template
    component: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
